# small-Warehouse-barcode-Inventory-System

./: .coverage  .gitignore  README.md  pyproject.toml  shipments_out.xlsx
rma/: __init__.py  auth.py  customer.py  db.py  json.py  overview.py  product.py  rma.py  scan_in_bundle.py  scan_out_bundle.py  schema.sql  search.py  temp.py  test.py
rma/json/: amount.json  customers.json  overview_customers.json  overview_products.json  overview_shipments.json  product_search_sku_stock.json  product_skus.json  products.json  shipments_in.json  shipments_out.json
rma/static/: custom.css  style.css
rma/templates/: base.html  overviews.html  page_not_found.html  template.html
rma/templates/auth/: login.html  register.html
rma/templates/customer/: create.html  filtered_products.html  filtered_shipments.html  index.html  update.html
rma/templates/product/: amount.html  create_batch_scope.html  create_single.html  create_sku.html  index.html  search_sku_stock.html  update.html  update_sku.html
rma/templates/rma/: create.html  index.html  update.html
rma/templates/search/: index.html  timeline.html
rma/templates/shipment/: create_and_scan_single_product.html  scan_in.html  scan_in_batch.html  scan_in_range.html  scan_in_single.html  scan_out.html  scan_out_batch.html  scan_out_range.html  scan_out_single.html  scan_out_update.html  update.html
